--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -188,8 +188,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/ClimbingSystem")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ClimbingSystem")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ClimbingSystemGameMode")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ClimbingSystemCharacter")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="CSGameMode")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="CSharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -205,3 +205,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ClimbingSystem.ClimbingSystemCharacter",NewName="/Script/ClimbingSystem.CSharacter")
++ClassRedirects=(OldName="/Script/ClimbingSystem.ClimbingSystemGameMode",NewName="/Script/ClimbingSystem.CSGameMode")
++ClassRedirects=(OldName="/Script/ClimbingSystem.CSCustomMovementComponent",NewName="/Script/ClimbingSystem.CSMovementComponent")
